지지/저항선 간격 가깝지 않도록 필터